--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,13 @@
 * {
-    background: #6c3c87;
+    background:#F3F5FC;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     line-height: 150%;
-    overflow: hidden;
 
 }
 
-.logo {
-    width: 5%;
-    border: 2px solid #0A3871;
+header{
+    padding: 0 40px;
 }
 
 
@@ -18,26 +16,29 @@
 main {
     display: flex;
     box-sizing: border-box;
-    border: 2px solid #0A3871;
     justify-content: space-between;
-    height: 80%;
     margin-left: 4%;
+    padding: 0 40px 0 240px;
+
+    
 
 }
 
 .seccion__izquierda {
     display: flex;
     flex-direction: column;
-    gap: 10%;
+    gap: 10px;
+
 }
 
 
 .text-area {
-    border: 2px solid #0A3871;
     color: #0A3871;
-    height: 500px;
+    height: 400px;
     resize: none;
     font-size: 32px;
+    border-style: none;
+    padding-top: 200px;
 
 }
 
@@ -50,46 +51,79 @@ main {
 }
 
 
+.seccion__derecha{
+    padding: 0 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
 
-.mensaje {
+
+}
+
+.mensaje  {
     background: white;
     background-image: url('/assets/Muñeco.png');
-    background-position: center;
     background-repeat: no-repeat;
-    border: 2px solid #0A3871;
+    background-position: center;
+    background-position-y: 200px;
     border-radius: 32px;
-    color: #0A3871;
-    height: 820px;
-    width: 400px;
+    color: #495057;
+    height: 830px;
+    width: 450px;
     resize: none;
     text-align: center;
     font-size: 24px;
-    position: relative;
-
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-style: none;
+    padding-top: 40px;
+    
 }
 
 .mensaje:focus {
     outline: none;
 }
 
+.seccion__derecha__texto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 60%;
+    text-align: center;
+    background:none;
+    gap:1px;
 
+}
+.texto__cuadro__1{ 
+    width: 300px;
+    background:none;
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+}
+
+.texto__cuadro__2{
+    background:none;
+    font-size: 16px;
+    color: #495057;
+}
 
 
 .informacion {
     color: #495057;
-    font-size: 60%;
-    background-image: url(/assets/bi_exclamation-circle-fill.png);
-    background-repeat: no-repeat;
-    padding-left: 20px;
-    align-items: center;
+    font-size: 10px;
+    padding: 20px;
+
+
 }
 
 .botones {
     display: flex;
-    margin-top: 18px;
-    border: 2px solid #0A3871;
-    gap: 40px;
-
+    gap: 50px;
+    padding: 10px 0 0 0;
+    margin-top: 40px;
+    margin-bottom: 50px;
 }
 
 .btn-encriptar {
@@ -119,13 +153,15 @@ main {
     cursor: pointer;
     height: 67px;
     width: 336px;
-    position: inherit;
-    bottom: 10%;
-    left: 72%;
+    position: absolute;
+    top: 86%;
+    background: none;
+    
 }
 
 footer {
     font-size: 16px;
-    text-align: center;
     color: #0A3871;
+    text-align: center;
+    margin: 2%;
 }
